feat: user creation via inviation, user activation via endpoint
